<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_phone">

    <fragment
        android:id="@+id/navigation_phone"
        android:name="com.codersguidebook.communication.ui.phone.PhoneFragment"
        android:label="@string/phone"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/navigation_sms"
        android:name="com.codersguidebook.communication.ui.sms.SMSFragment"
        android:label="@string/sms"
        tools:layout="@layout/fragment_sms" />

    <fragment
        android:id="@+id/navigation_call_log"
        android:name="com.codersguidebook.communication.ui.callLog.CallLogFragment"
        android:label="@string/call_log"
        tools:layout="@layout/fragment_call_log" />
</navigation>
