<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:hint="@string/number"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/message"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_below="@+id/number" />

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/body"
            android:layout_alignParentEnd="true"
            android:text="@string/send"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_below="@id/body"
            android:layout_toStartOf="@id/sendBtn"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />
    </RelativeLayout>
</ScrollView>